force-app/main/default/objects/PPSTN_TradingAccountApproval__c/PPSTN_TradingAccountApproval__c.object-meta.xml
<CustomObject>
    <label>PPSTN_TradingAccountApproval</label>
    <nameField>
        <displayFormat>TAA-{00000}</displayFormat>
        <label>SFTradingAccountApproval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPSTN_TradingAccountApproval</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>