force-app/main/default/objects/PPSTN_TradingAccountApproval__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PPSTN_TradingAccountApproval</relationshipLabel>
    <relationshipName>PPSTN_TradingAccountApproval</relationshipName>
    <type>Lookup</type>
</CustomField>