force-app/main/default/objects/PPSTN_TradingAccountApproval__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PPSTN_TradingAccountApproval</relationshipLabel>
    <relationshipName>PPSTN_TradingAccountApproval</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>