force-app/main/default/objects/PPSTN_TradingAccountApproval__c/fields/PPSTN_UserRole__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_UserRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PPSTN_UserRole</label>
    <referenceTo>PPSTN_UserRole__c</referenceTo>
    <relationshipLabel>PPSTN_TradingAccountApproval</relationshipLabel>
    <relationshipName>PPSTN_TradingAccountApproval</relationshipName>
    <type>Lookup</type>
</CustomField>