force-app/main/default/objects/PPSTN_TradingAccountApproval__c/fields/RequestPriority__c.field-meta.xml
<CustomField>
    <fullName>RequestPriority__c</fullName>
    <label>RequestPriority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>